objects/Intervention_Session__c.object
<CustomObject>
    <description>The Intervention Session object captures that an Intervention Section met on a particular day. The outcome of the session is attached to the Intervention Session record.</description>
    <fields>
        <fullName>All_avenues__c</fullName>
        <label>All avenues</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-Person Service</fullName>
                </value>
                <value>
                    <fullName>Virtual Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Are there any additional comments for this Intervention Session?</inlineHelpText>
        <label>Add&apos;l Comments for Session</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <inlineHelpText>What was the date that this Intervention Session took place?</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ISR_Count__c</fullName>
        <label>ISR Count</label>
        <summaryForeignKey>Intervention_Session_Result__c.Intervention_Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Month_of_Year__c</fullName>
        <description>Month of the Year the Intervention Session occurred.</description>
        <formula>MONTH(Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Month of Year</inlineHelpText>
        <label>MOY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <inlineHelpText>This field connects the Intervention Session record to the correct intervention Section.</inlineHelpText>
        <label>Section</label>
        <referenceTo>Section__c</referenceTo>
        <relationshipLabel>Intervention Sessions</relationshipLabel>
        <relationshipName>Intervention_Sessions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Session_Format__c</fullName>
        <label>Session Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Push In</fullName>
                </value>
                <value>
                    <fullName>Pull Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Session_Time_Completed_For__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Who was the staff member that led the Intervention Section? This field allows a user to enter Session time on behalf of another user.</inlineHelpText>
        <label>Session Time Completed For</label>
        <referenceTo>Staff__c</referenceTo>
        <relationshipLabel>Intervention Sessions</relationshipLabel>
        <relationshipName>Intervention_Sessions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Session_Type__c</fullName>
        <label>Session Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1:1</fullName>
                </value>
                <value>
                    <fullName>Small Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site_Details__c</fullName>
        <label>Site Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skill_Primary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Skill</label>
        <referenceTo>Skill__c</referenceTo>
        <relationshipLabel>Intervention Sessions</relationshipLabel>
        <relationshipName>Intervention_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Skills_Covered_for_the_Session__c</fullName>
        <inlineHelpText>What specific skills were covered in this Intervention Session?</inlineHelpText>
        <label>Other Skills</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Skills__c</fullName>
        <inlineHelpText>What specific skills were covered in this Intervention Session?</inlineHelpText>
        <label>Skills Covered for the Session</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tutoring_Model__c</fullName>
        <label>Tutoring Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Catch Up</fullName>
                </value>
                <value>
                    <fullName>Keep Up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Week_of_Year__c</fullName>
        <description>Week of the year the intervention section occurred on</description>
        <formula>MOD(FLOOR( (Date__c - DATEVALUE(&quot;2006-01-01&quot; ))/7),52)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Week of the year the intervention section occurred on</inlineHelpText>
        <label>WOY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Intervention Session</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Section__c</columns>
        <columns>Session_Time_Completed_For__c</columns>
        <columns>Skills__c</columns>
        <columns>Comments__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IS-{000000}</displayFormat>
        <label>Inter. Session ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intervention Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Date_range_in_section</fullName>
        <active>true</active>
        <errorConditionFormula>OR( Date__c &lt; Section__r.Start_Date__c, Date__c &gt; Section__r.End_Date__c )</errorConditionFormula>
        <errorDisplayField>Date__c</errorDisplayField>
        <errorMessage>Date should be within the start and end of the section.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_required</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL( Date__c)</errorConditionFormula>
        <errorMessage>Date can&apos;t be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dosage_denied</fullName>
        <active>true</active>
        <errorConditionFormula>Section__r.Account_Program__r.Program__r.SkipDosage__c</errorConditionFormula>
        <errorMessage>This program does not allow dosage to be logged</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Skill_Category_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT(ISBLANK(Skill_Primary__c)), IF(Section__r.Account_Program__r.Program__r.Name == &apos;Tutoring: Math&apos;, TEXT(Skill_Primary__r.Category__c) &lt;&gt; &apos;Math&apos;, 
IF(Section__r.Account_Program__r.Program__r.Name == &apos;Tutoring: Literacy&apos;, TEXT(Skill_Primary__r.Category__c) &lt;&gt; &apos;Literacy&apos;,
TEXT(Skill_Primary__r.Category__c) &lt;&gt; &apos;SEL/Behavior and Attendance Interventions&apos;)))</errorConditionFormula>
        <errorDisplayField>Skill_Primary__c</errorDisplayField>
        <errorMessage>Skill category should be match</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_Curriculum</fullName>
        <active>true</active>
        <errorConditionFormula>Section__r.RecordType.Name == &apos;Curriculum&apos; ||  ISPICKVAL(Section__r.In_After_School__c, &apos;Curriculum&apos;)</errorConditionFormula>
        <errorMessage>This is a curriculum section and is unable to add dosage.</errorMessage>
    </validationRules>
</CustomObject>