objects/Intervention_Session__c/fields/IS_18_Digit_ID__c.field-meta.xml
<CustomField>
    <fullName>IS_18_Digit_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IS 18 Digit ID</label>
    <type>Text</type>
</CustomField>