objects/Intervention_Session__c/fields/Max_Session_Time__c.field-meta.xml
<CustomField>
    <fullName>Max_Session_Time__c</fullName>
    <label>Max Session Time</label>
    <summarizedField>Intervention_Session_Result__c.Amount_of_Time__c</summarizedField>
    <summaryForeignKey>Intervention_Session_Result__c.Intervention_Session__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>