objects/Intervention_Session__c/fields/Total_number_of_sessions_results__c.field-meta.xml
<CustomField>
    <fullName>Total_number_of_sessions_results__c</fullName>
    <label>Total number of session results</label>
    <summaryForeignKey>Intervention_Session_Result__c.Intervention_Session__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>