objects/Intervention_Session__c/validationRules/Date_range_in_section.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_range_in_section</fullName>
    <active>true</active>
    <errorConditionFormula>OR( Date__c &lt; Section__r.Start_Date__c, Date__c &gt; Section__r.End_Date__c )</errorConditionFormula>
    <errorDisplayField>Date__c</errorDisplayField>
    <errorMessage>Date should be within the start and end of the section.</errorMessage>
</ValidationRule>