objects/Intervention_Session__c/validationRules/Date_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_required</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL( Date__c)</errorConditionFormula>
    <errorMessage>Date can&apos;t be empty</errorMessage>
</ValidationRule>