objects/Intervention_Session__c/validationRules/Dosage_denied.validationRule-meta.xml
<ValidationRule>
    <fullName>Dosage_denied</fullName>
    <active>true</active>
    <errorConditionFormula>Section__r.Account_Program__r.Program__r.SkipDosage__c</errorConditionFormula>
    <errorMessage>This program does not allow dosage to be logged</errorMessage>
</ValidationRule>