objects/Intervention_Session__c/validationRules/Skill_Category_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Skill_Category_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(ISBLANK(Skill_Primary__c)), IF(Section__r.Account_Program__r.Program__r.Name == &apos;Tutoring: Math&apos;, TEXT(Skill_Primary__r.Category__c) &lt;&gt; &apos;Math&apos;, 
IF(Section__r.Account_Program__r.Program__r.Name == &apos;Tutoring: Literacy&apos;, TEXT(Skill_Primary__r.Category__c) &lt;&gt; &apos;Literacy&apos;,
TEXT(Skill_Primary__r.Category__c) &lt;&gt; &apos;SEL/Behavior and Attendance Interventions&apos;)))</errorConditionFormula>
    <errorDisplayField>Skill_Primary__c</errorDisplayField>
    <errorMessage>Skill category should be match</errorMessage>
</ValidationRule>