objects/Intervention_Session__c/validationRules/Validation_Curriculum.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Curriculum</fullName>
    <active>true</active>
    <errorConditionFormula>Section__r.RecordType.Name == &apos;Curriculum&apos; ||  ISPICKVAL(Section__r.In_After_School__c, &apos;Curriculum&apos;)</errorConditionFormula>
    <errorMessage>This is a curriculum section and is unable to add dosage.</errorMessage>
</ValidationRule>